assign complete local
