# audit_log/app.py
@@ -6,6 +6,7 @@ import logging.config
 import connexion
 from flask_cors import CORS, cross_origin
 import os
+from connexion import NoContent
 
 if "TARGET_ENV" in os.environ and os.environ["TARGET_ENV"] == "test":
     print("In Test Environment")
@@ -75,6 +76,8 @@ def get_resources_index(index):
 
     return {"message": "Not Found"}, 404
 
+def health_check():
+    return NoContent, 200
 
 app = connexion.FlaskApp(__name__, specification_dir='')
 CORS(app.app)
